--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.roman</groupId>
-    <artifactId>CurcutSolver</artifactId>
+    <artifactId>CurcuitSolver</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
