Основная логика рабоает, есть некоторые ошибки

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,20 @@
                 </configuration>
             </plugin>
         </plugins>
+
+        <resources>
+            <resource>
+                <directory>src/main/java/org/roman/view/window</directory>
+                <includes>
+                    <include>**/*.fxml</include>
+                    <include>**/*.css</include>
+                    <include>**/*.properties</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
+
+
 
 
 </project>
